@@ -940,19 +940,19 @@ $01=Entertainment
 19=967
 19=968
 19=969
-19=970
-19=971
-19=972
-19=973
-19=974
-19=975
-19=976
-19=977
-19=978
-19=979
 
 #20 - BBC Red Button
 
+20=970
+20=971
+20=972
+20=973
+20=974
+20=975
+20=976
+20=977
+20=978
+20=979
 20=980
 20=981
 20=982
